@@ -18,25 +18,24 @@ classifiers =
     Programming Language :: Python
     Topic :: Scientific/Engineering
     Topic :: Software Development :: Libraries
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
 
 [options]
 packages = pint
 zip_safe = True
 include_package_data = True
-python_requires = >=3.6
+python_requires = >=3.7
 install_requires =
     packaging
     importlib-metadata; python_version < '3.8'
-    importlib-resources; python_version < '3.7'
 setup_requires = setuptools; setuptools_scm
 test_suite = pint.testsuite.testsuite
 scripts = pint/pint-convert
 
 [options.extras_require]
-numpy = numpy >= 1.14
+numpy = numpy >= 1.17
 uncertainties = uncertainties >= 3.0
 test =
     pytest
